force-app/main/default/objects/JK_WorkExperience__c/fields/WE_designationWhenLeaving__c.field-meta.xml
<CustomField>
    <fullName>WE_designationWhenLeaving__c</fullName>
    <label>WE_designationWhenLeaving</label>
    <length>100</length>
    <type>Text</type>
</CustomField>