force-app/main/default/objects/JK_WorkExperience__c/fields/WE_duration__c.field-meta.xml
<CustomField>
    <fullName>WE_duration__c</fullName>
    <label>WE_duration</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>