force-app/main/default/objects/JK_WorkExperience__c/fields/WE_from__c.field-meta.xml
<CustomField>
    <fullName>WE_from__c</fullName>
    <label>WE_from</label>
    <length>100</length>
    <type>Text</type>
</CustomField>