force-app/main/default/objects/JK_WorkExperience__c/fields/WE_reasonForLeaving__c.field-meta.xml
<CustomField>
    <fullName>WE_reasonForLeaving__c</fullName>
    <label>WE_reasonForLeaving</label>
    <type>TextArea</type>
</CustomField>