force-app/main/default/objects/JK_WorkExperience__c/fields/WE_to__c.field-meta.xml
<CustomField>
    <fullName>WE_to__c</fullName>
    <label>WE_to</label>
    <length>100</length>
    <type>Text</type>
</CustomField>